# generate_synthetic_data

./: .gitignore  README.md  pyproject.toml
config/: config.py
docs/: README.md
schema/: brand.py  category.py  order.py  order_item.py  product.py  promotion_products.py  promotions.py  seller.py
src/: main.py
tests/c/: test.py
tests/src/: a.py
