[project]
name = "project-3"
version = "0.2.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = ""}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=39.0.0,<40.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
